--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,7 @@
 					</section>
 			
 				<!-- Contact -->
-					<section id="contact" class="four" ng-controller="ContactCtrl">
+					<section id="contact" class="four fade" ng-controller="ContactCtrl">
 						<div ng-include="'views/contact/contact.html'"></div>
 					</section>
 			
