--- a/app/index.html
+++ b/app/index.html
@@ -65,9 +65,8 @@
 			<section id="banner" ng-controller="BannerCtrl">
 				<div class="content">
 				        <header>
-			        	        <h2>The future has landed</h2>
-				        	        <p>And there are no hoverboards or flying cars.<br />
-				                Just apps. Lots of mother flipping apps.</p>
+			        	        <h2>{{ subject }}</h2>
+			        	        <p>{{ content }}</p>
 				        </header>
 				        <span class="image"><img src="resources/images/pic01.jpg" alt="" /></span>
 				</div>
