--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
 			        	        <h2>{{ subject }}</h2>
 			        	        <p>{{ content }}</p>
 				        </header>
-				        <span class="image"><img src="resources/images/pic01.jpg" alt="" /></span>
+				        <span class="image"><img src="resources/images/golf/20150413_27.jpg" alt="" /></span>
 				</div>
 				<a href="#intro" class="goto-next scrolly">Next</a>
 			</section>
