글귀 수정- 메인화면 및 composite화면

--- a/app/index.html
+++ b/app/index.html
@@ -34,12 +34,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html">청남</a></h1>
+				<h1 id="logo"><a href="index.html">청남골프연습장</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">처음으로</a></li>
 						<li>
-							<a href="">Menu</a>
+							<a href="">메뉴</a>
 							<ul>
 								<li><a href="#banner" class="scrolly">환영합니다</a></li>
 								<li><a href="#intro" class="scrolly">소개합니다</a></li>
