angular.js 경로 수정

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
                 <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
-		<script src="bower_components/angular/angular.js"></script>
+		<script src="../bower_components/angular/angular.js"></script>
 		
 		<script type="text/javascript" src="//apis.daum.net/maps/maps3.js?apikey=c3948c1f8748ae29a28462b998a5d6c9"></script>
 	</head>
@@ -110,8 +110,8 @@
 					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
-          <script src="bower_components/angular/angular.js"></script>
-	  <script src="bower_components/angular-route/angular-route.js"></script>
+          <script src="../bower_components/angular/angular.js"></script>
+	  <script src="../bower_components/angular-route/angular-route.js"></script>
 	  <script src="app.js"></script>
 	  <script src="views/intro/intro.js"></script>
 	  <script src="views/greeting/greeting.js"></script>
